Add Codecov coverage

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,13 @@ cmake_minimum_required(VERSION 2.6)
 project(parg C)
 
 option(BUILD_TEST "Build unit test" ON)
+option(BUILD_COVERAGE "Code coverage" OFF)
+
+message(STATUS "CMAKE_BUILD_TYPE: ${CMAKE_BUILD_TYPE}")
+
+if(BUILD_COVERAGE)
+	set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -g -O0 --coverage")
+endif()
 
 include_directories(${PROJECT_SOURCE_DIR})
 
