--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,8 @@ cmake_minimum_required(VERSION 2.8)
 
 project(parg C)
 
-option(BUILD_TEST "Build unit test" ON)
+include(CTest)
+
 option(BUILD_COVERAGE "Code coverage" OFF)
 
 message(STATUS "CMAKE_BUILD_TYPE: ${CMAKE_BUILD_TYPE}")
@@ -39,7 +40,7 @@ include_directories(${PROJECT_SOURCE_DIR})
 
 add_library(parg parg.c parg.h)
 
-if(BUILD_TEST)
+if(BUILD_TESTING)
 	add_executable(test_parg test/test_parg.c test/greatest.h parg.h)
 	target_link_libraries(test_parg parg)
 
